fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,6 @@
 	content: "\e604";
 }
 
-/** {
-	border: 1px red solid;
-}*/
 
 html {
 	margin: 0 auto;
@@ -103,11 +100,11 @@ h1 {
 	font-weight: 400;
 	letter-spacing: 2px;
 	font-size: 3.1em;
-	margin-left: 30px;
+	/*margin-left: 30px;
 	margin-bottom: 47px;
-	display: inline-block;
+	display: inline-block;*/
 	vertical-align: middle;
-	padding-bottom: 2%;
+	/*padding-bottom: 2%;*/
 	/*color: #CC4400;*/
 }
 
@@ -129,13 +126,23 @@ p {
 }
 
 header {
-	background-image: url(../images/eklogo2.jpg);
+	/*background-image: url(../images/eklogo2.png);*/
 	background-repeat: no-repeat;
 	margin: 2% auto;
 	position: relative;
 	width: 70%;
 	padding-top: 2%;
 	overflow: hidden;
+}
+
+.topHeader {
+    width: 55%;
+    height: auto;
+    min-height: 100px;
+    text-align: left;
+    display: inline-block;
+    min-width: 490px;
+    margin-left: .5em;
 }
 
 /* navigation style */
@@ -153,10 +160,10 @@ nav a {
 }
 
 .nav1 {
-	margin-bottom: 10px;
+	/*margin-bottom: 10px;
 	margin-top: -60px;
 	position: absolute;
-	left: 380px;
+	left: 380px;*/
 }
 
 .nav2 {
@@ -164,6 +171,7 @@ nav a {
 	overflow: hidden;
 	text-align:center;
 	color: #444444;
+	padding-top: .5em;
 }
 
 .nav2 ul {
@@ -183,7 +191,8 @@ nav a {
 .arrows {
 	clear: both;
 	overflow: hidden;
-	margin: 5% auto;
+	margin: 0 auto;
+	padding: 4em;
 	width: 33%;
 	text-align: center;
 }
@@ -204,7 +213,6 @@ nav a {
 .followClick {
 	font-family: 'Avant Garde', sans-serif;
 	color:  #444444;
-	padding-top: 1px;
 }
 
 .followClick:hover {
@@ -278,17 +286,27 @@ article {
 
 #bio {
 	margin: 0 auto;
-	padding-top: 21%;
+	padding-top: 280px;
 	width: 60%;
 }
 
 /*portfolio section style*/
 
+div #portfolioBG {
+    margin: 0 auto;
+    width: 70%;
+    padding-top: 4em;
+    padding-bottom: 2em;
+    text-align: left;
+}
+
 #portfolio {
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	clear: both;
-	padding: 4em 1em 2em;
+	/*padding: 4em 1em 2em;*/
 	background-color: #f79618;
+	text-align: center;
+	/*width: 70%;*/
 }
 
 .item {
@@ -338,16 +356,12 @@ article {
 }
 
 footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
 	height: 45px;
 	/*font-size: .85em;*/
 	color: #DDDDDD;
 	font-family: 'Avant Garde', sans-serif;
 	background-color: #999999;
-	padding: 15px;
+	padding: 18px;
 	clear: both;
 }
 
